cmake_minimum_required(VERSION 3.15)

project(leetcode-cpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)

if(DEFINED LEETCODE_PROBLEM_ID)
  message(STATUS "Building problem #${LEETCODE_PROBLEM_ID}")
else()
  message(FATAL_ERROR "LEETCODE_PROBLEM_ID not defined")
endif()

string(LENGTH "${LEETCODE_PROBLEM_ID}" LEN)
while(LEN LESS 4)
  set(LEETCODE_PROBLEM_ID "0${LEETCODE_PROBLEM_ID}")
  string(LENGTH "${LEETCODE_PROBLEM_ID}" LEN)
endwhile()

string(SUBSTRING "${LEETCODE_PROBLEM_ID}" 0 2 PROBLEM_DIRECTORY)
string(SUBSTRING "${LEETCODE_PROBLEM_ID}" 2 2 PROBLEM_ID)

add_executable(${PROJECT_NAME} "src/${PROBLEM_DIRECTORY}/${PROBLEM_ID}.cpp")
target_compile_definitions(${PROJECT_NAME}
  PUBLIC "PROBLEM_ID=${LEETCODE_PROBLEM_ID}")
